# Zora

./: CMakeLists.txt  CMakeLists.txt.user.c6ea095  README.md  account.cpp  account.h  account.ui  account_addpage.cpp  account_addpage.h  account_addpage.ui  account_monthchart.cpp  account_monthchart.h  account_monthchart.ui  account_yearchart.cpp  account_yearchart.h  account_yearchart.ui  cardwidget.cpp  cardwidget.h  coursecard.cpp  coursecard.h  coursetabelwidget.cpp  coursetabelwidget.h  image.qrc  life.cpp  life.h  life.ui  listwidget.cpp  listwidget.h  main.cpp  music.cpp  music.h  music.ui  password.cpp  password.h  password.ui  passwordaddpage.cpp  passwordaddpage.h  passwordaddpage.ui  passwordlogin.cpp  passwordlogin.h  passwordlogin.ui  (+16 more)
